minor updates to sandbot tests

--- a/cloudflow/notebooks/sandbot_test_jobobject.ipynb
+++ b/cloudflow/notebooks/sandbot_test_jobobject.ipynb
@@ -121,7 +121,8 @@
     "    imagename = outfile.split('/')[-1]\n",
     "\n",
     "    plt.savefig(outfile, bbox_inches='tight')\n",
-    "                 \n",
+    "    plt.close(fig)\n",
+    "             \n",
     "    if s3upload:\n",
     "        s3 = S3Storage()\n",
     "        bucket = 'ioos-cloud-www'\n",
