ran gomofs test

--- a/cloudflow/notebooks/sandbot_test_jobobject.ipynb
+++ b/cloudflow/notebooks/sandbot_test_jobobject.ipynb
@@ -29,6 +29,7 @@
     "def make_indexhtml(indexfile : str, imagelist : list):\n",
     "\n",
     "    htmlhead = '''<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
+    "                  <meta http-equiv=\"Cache-control\" content=\"no-cache\">\n",
     "                  <head>\n",
     "                  <title>Cloud-Sandbot</title>'''\n",
     "\n",
@@ -58,7 +59,10 @@
     "\n",
     "    # Should not use single leterr variable names\n",
     "    # Choose a name that describes what it is\n",
-    "    filespec = f'{COMDIR}/nos.{OFS}.fields.f*.t{HH}z.nc'\n",
+    "    # Why load in the entire dataset when only plotting one time slice? \n",
+    "    # It is extremely slow!\n",
+    "    #  nos.gomofs.fields.f006.20200819.t00z.nc\n",
+    "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
     "    print(f'filespec is: {filespec}')\n",
     "    return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n"
    ]
@@ -87,7 +91,7 @@
     "        da = ds[variable].isel(ocean_time=0)\n",
     "        cmap = cmocean.cm.diff\n",
     "      \n",
-    "    fig = plt.figure(figsize=(12,5), dpi=100)\n",
+    "    fig = plt.figure(figsize=(12,5))\n",
     "    ax = fig.add_axes([0,0,1,1], projection=ccrs.PlateCarree())\n",
     "    im = ax.contourf(da.lon_rho, da.lat_rho, da.values,\n",
     "                     transform=ccrs.PlateCarree(), \n",
@@ -149,7 +153,6 @@
     "    print(f'HH is: {HH}')\n",
     "    print('Running ...')\n",
     "\n",
-    "\n",
     "    # could check that this is a roms model\n",
     "    # if ofs in utils.roms_models then do roms\n",
     "    # else if ofs in utils.fvcom_models then do fvcom\n",
@@ -185,7 +188,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobfile = 'cbofs_plotting_job.json'\n",
+    "''' We're still looking for a way to not have to do something like this.\n",
+    "We really want this job to run without having to specify any parameters.\n",
+    "'''\n",
+    "jobfile = 'plotting_job.json'\n",
     "NPROCS = 1\n",
     "testjob = Plotting(jobfile, 1)\n",
     "main(testjob)"
@@ -193,9 +199,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2020-08-20 10:18:50,315] INFO - flow_runner.run | Beginning Flow run for 'notebook test'\n",
+      "[2020-08-20 10:18:50,321] INFO - flow_runner.set_flow_to_running | Starting flow run.\n",
+      "[2020-08-20 10:18:50,350] INFO - task_runner.run | Task 'run_pynotebook': Starting task run...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 2020-08-20 10:18:50,351  INFO - tasks.run_pynotebook | Running sandbot_test_jobobject.py\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"JOBTYPE\": \"plotting_diff\",\n",
+      "    \"OFS\": \"gomofs\",\n",
+      "    \"CDATE\": \"20200819\",\n",
+      "    \"HH\": \"00\",\n",
+      "    \"INDIR\": \"auto\",\n",
+      "    \"OUTDIR\": \"auto\",\n",
+      "    \"VERIFDIR\": \"auto\",\n",
+      "    \"VARS\": [\n",
+      "        \"temp\",\n",
+      "        \"zeta\",\n",
+      "        \"salt\"\n",
+      "    ],\n",
+      "    \"BUCKET\": \"ioos-cloud-sandbox\",\n",
+      "    \"BCKTFLDR\": \"public/nosofs/plots/gomofs\",\n",
+      "    \"FSPEC\": \"nos.gomofs.fields.f*t00z.nc\"\n",
+      "}\n",
+      "{'JOBTYPE': 'plotting_diff', 'OFS': 'gomofs', 'CDATE': '20200819', 'HH': '00', 'INDIR': 'auto', 'OUTDIR': 'auto', 'VERIFDIR': 'auto', 'VARS': ['temp', 'zeta', 'salt'], 'BUCKET': 'ioos-cloud-sandbox', 'BCKTFLDR': 'public/nosofs/plots/gomofs', 'FSPEC': 'nos.gomofs.fields.f*t00z.nc'}\n",
+      "COMDIR is: /com/nos/gomofs.2020081900\n",
+      "OFS is: gomofs\n",
+      "HH is: 00\n",
+      "Running ...\n",
+      "filespec is: /com/nos/gomofs.2020081900/nos.gomofs.fields.f00*.t00z.nc\n",
+      "08/20/2020, 10:18:55\n",
+      "08/20/2020, 10:19:02\n",
+      "08/20/2020, 10:19:04\n",
+      "Finished ...\n",
+      "\n",
+      "[2020-08-20 10:19:06,102] INFO - task_runner.run | Task 'run_pynotebook': finished task run for task with final state: 'Success'\n",
+      "[2020-08-20 10:19:06,104] INFO - flow_runner.determine_final_state | Flow run SUCCESS: all reference tasks succeeded\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'PASSED'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from cloudflow.workflows import flows\n",
     "\n",
