added current fcst dataset

--- a/cloudflow/notebooks/sandbot_test_noparm.ipynb
+++ b/cloudflow/notebooks/sandbot_test_noparm.ipynb
@@ -8,16 +8,21 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "import glob\n",
+    "from datetime import datetime\n",
+    "\n",
     "import boto3\n",
     "import cmocean\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
-    "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from xarray import open_mfdataset\n",
+    "\n",
     "from cloudflow.services.S3Storage import S3Storage\n",
-    "from cloudflow.job.Plotting import Plotting\n"
+    "from cloudflow.job.Plotting import Plotting\n",
+    "\n",
+    "DEBUG = True"
    ]
   },
   {
@@ -55,7 +60,7 @@
    "outputs": [],
    "source": [
     "def roms_nosofs(COMDIR: str, OFS: str, HH: str):\n",
-    "    '''Load ROMS NOSOFS dataset'''\n",
+    "    \"\"\"Load ROMS NOSOFS dataset\"\"\"\n",
     "\n",
     "    # Why load in the entire dataset when only plotting one time slice? \n",
     "    # It is extremely slow!\n",
@@ -63,6 +68,73 @@
     "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
     "    print(f'filespec is: {filespec}')\n",
     "    return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dsofs_latest(COMROT: str='/com/nos'):\n",
+    "    \"\"\" Load the most recent OFS forecast available on COMROT \"\"\"\n",
+    "    \n",
+    "    # List the directories in COMROT that match [a-z]*ofs.YYYYMMDDHH\n",
+    "    regex = \"[a-z]*ofs.*[0-1][0-9][0-3][0-9][0-9][0-9]\"\n",
+    "    dirs = glob.glob(f'{COMROT}/{regex}')\n",
+    "    \n",
+    "    if DEBUG: \n",
+    "        print ('dirs: ', dirs)\n",
+    "    \n",
+    "    # Find the one that has the most recent forecast date (do not use modification time?)\n",
+    "    # But what if there are two different forecasts for the same date? (use modification time)\n",
+    "    dates = []\n",
+    "    newest='1900010100'\n",
+    "    comdir=dirs[0]\n",
+    "    \n",
+    "    for path in dirs:\n",
+    "        #print(path.split('.'))\n",
+    "        date = path.split('.')[-1]\n",
+    "        if date > newest:\n",
+    "            newest = date\n",
+    "            comdir = path          \n",
+    "            \n",
+    "        dates.append(date)\n",
+    "\n",
+    "    if DEBUG:\n",
+    "        #print('dates : ', dates)\n",
+    "        #print('newest: ', newest)\n",
+    "        print('comdir: ', comdir)\n",
+    "        \n",
+    "    # Use the folder name to discover OFS, CDATE, HH\n",
+    "    ofs = comdir.split('.')[0].split('/')[-1]\n",
+    "    print(ofs)\n",
+    "    CDATE = newest[0:8]\n",
+    "    HH = newest[8:10]\n",
+    "    print(CDATE)\n",
+    "    print(HH)\n",
+    "    \n",
+    "    COMDIR = comdir\n",
+    "    OFS = ofs\n",
+    "    print(COMDIR)\n",
+    "    \n",
+    "    if DEBUG: # Only grab first 0-9 hours. Faster!\n",
+    "        filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
+    "    else: # Grab all hours\n",
+    "        filespec = f'{COMDIR}/nos.{OFS}.fields.f*.t{HH}z.nc'\n",
+    "        \n",
+    "    print(f'filespec is: {filespec}')\n",
+    "    return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Testing\n",
+    "# dsofs_latest()"
    ]
   },
   {
@@ -156,6 +228,7 @@
     "    # else if ofs in utils.fvcom_models then do fvcom\n",
     "\n",
     "    ds_roms = roms_nosofs(COMDIR, OFS, HH)\n",
+    "    \n",
     "    indexfile = f'docs/index.html'\n",
     "    if not os.path.exists('./docs'):\n",
     "        os.makedirs('./docs')\n",
@@ -186,13 +259,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' We're still looking for a way to not have to do something like this.\n",
-    "We really want this job to run without having to specify any parameters.\n",
-    "'''\n",
-    "jobfile = 'plotting_job.json'\n",
-    "NPROCS = 1\n",
-    "testjob = Plotting(jobfile, 1)\n",
-    "main(testjob)"
+    "def main_no_jobobj():\n",
+    "    \n",
+    "    ds_ofs = dsofs_latest()\n",
+    "    \n",
+    "    indexfile = f'docs/index.html'\n",
+    "    if not os.path.exists('./docs'):\n",
+    "        os.makedirs('./docs')\n",
+    "\n",
+    "    bucket = 'ioos-cloud-www'\n",
+    "\n",
+    "    storageService = S3Storage()\n",
+    "\n",
+    "    rho_vars = ['temp',\"zeta\", \"salt\" ]\n",
+    "\n",
+    "    imagelist = []\n",
+    "\n",
+    "    for var in rho_vars:\n",
+    "        imagename = plot_rho(ds_ofs, var, s3upload=True)\n",
+    "        imagelist.append(imagename)\n",
+    "\n",
+    "    make_indexhtml(indexfile, imagelist)\n",
+    "    storageService.uploadFile(indexfile, bucket, 'index.html', public=True, text=True)\n",
+    "    \n",
+    "    print('Finished ...')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_with_jobobj():\n",
+    "    ''' We're still looking for a way to not have to do something like this. \n",
+    "    We really want this job to run without having to specify any parameters. '''\n",
+    "    jobfile = 'plotting_job.json'\n",
+    "    NPROCS = 1\n",
+    "    testjob = Plotting(jobfile, 1)\n",
+    "    main(testjob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_no_jobobj()"
    ]
   },
   {
