moved sandbot website to /sandbot

--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -262,7 +262,9 @@
     "    if s3upload:\n",
     "        s3 = S3Storage()\n",
     "        bucket = 'ioos-cloud-www'\n",
-    "        s3.uploadFile(outfile, bucket, f'{variable}.png', public = True)\n",
+    "        bucket_folder = 'sandbot'\n",
+    "        key = f'{bucket_folder}/{variable}.png'\n",
+    "        s3.uploadFile(outfile, bucket, key, public = True)\n",
     "\n",
     "    return imagename\n"
    ]
@@ -296,6 +298,7 @@
     "        os.makedirs('./docs')\n",
     "\n",
     "    bucket = 'ioos-cloud-www'\n",
+    "    bucket_folder = 'sandbot'\n",
     "\n",
     "    storageService = S3Storage()\n",
     "\n",
@@ -308,7 +311,7 @@
     "        imagelist.append(imagename)\n",
     "\n",
     "    make_indexhtml(indexfile, imagelist)\n",
-    "    storageService.uploadFile(indexfile, bucket, 'index.html', public=True, text=True)\n",
+    "    storageService.uploadFile(indexfile, bucket, f'{bucket_folder}/index.html', public=True, text=True)\n",
     "    \n",
     "    print('Finished ...')\n",
     "    # return ds_roms\n",
@@ -347,7 +350,8 @@
     "        os.makedirs('./docs')\n",
     "\n",
     "    bucket = 'ioos-cloud-www'\n",
-    "\n",
+    "    bucket_folder = 'sandbot'\n",
+    "    \n",
     "    storageService = S3Storage()\n",
     "\n",
     "    rho_vars = ['temp',\"zeta\", \"salt\" ]\n",
@@ -359,7 +363,7 @@
     "        imagelist.append(imagename)\n",
     "\n",
     "    make_indexhtml(indexfile, imagelist)\n",
-    "    storageService.uploadFile(indexfile, bucket, 'index.html', public=True, text=True)\n",
+    "    storageService.uploadFile(indexfile, bucket, f'{bucket_folder}/index.html', public=True, text=True)\n",
     "    \n",
     "    print('Finished ...')"
    ]
