--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -21,6 +21,8 @@
     "\n",
     "from cloudflow.services.S3Storage import S3Storage\n",
     "from cloudflow.job.Plotting import Plotting\n",
+    "from cloudflow.utils import romsUtil as utils\n",
+    "\n",
     "\n",
     "DEBUG = True"
    ]
@@ -36,7 +38,8 @@
     "    htmlhead = '''<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
     "                  <meta http-equiv=\"Cache-control\" content=\"no-cache\">\n",
     "                  <head>\n",
-    "                  <title>Cloud-Sandbot</title>'''\n",
+    "                  <title>Cloud-Sandbot</title>\n",
+    "                  </head>'''\n",
     "\n",
     "    htmlbody = '<body>\\n'\n",
     "    for image in imagelist:\n",
@@ -62,9 +65,6 @@
     "def roms_nosofs(COMDIR: str, OFS: str, HH: str):\n",
     "    \"\"\"Load ROMS NOSOFS dataset\"\"\"\n",
     "\n",
-    "    # Why load in the entire dataset when only plotting one time slice? \n",
-    "    # It is extremely slow!\n",
-    "    #  nos.gomofs.fields.f006.20200819.t00z.nc\n",
     "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
     "    print(f'filespec is: {filespec}')\n",
     "    return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n"
@@ -76,65 +76,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dsofs_latest(COMROT: str='/com/nos'):\n",
-    "    \"\"\" Load the most recent OFS forecast available on COMROT \"\"\"\n",
-    "    \n",
-    "    # List the directories in COMROT that match [a-z]*ofs.YYYYMMDDHH\n",
-    "    regex = \"[a-z]*ofs.*[0-1][0-9][0-3][0-9][0-9][0-9]\"\n",
-    "    dirs = glob.glob(f'{COMROT}/{regex}')\n",
-    "    \n",
-    "    if DEBUG: \n",
-    "        print ('dirs: ', dirs)\n",
-    "    \n",
-    "    # Find the one that has the most recent forecast date (do not use modification time?)\n",
-    "    # But what if there are two different forecasts for the same date? (use modification time)\n",
-    "    dates = []\n",
-    "    newest='1900010100'\n",
-    "    comdir=dirs[0]\n",
-    "    \n",
-    "    for path in dirs:\n",
-    "        #print(path.split('.'))\n",
-    "        date = path.split('.')[-1]\n",
-    "        if date > newest:\n",
-    "            newest = date\n",
-    "            comdir = path          \n",
-    "            \n",
-    "        dates.append(date)\n",
+    "def fvcom_nosofs(COMDIR: str, OFS: str, HH: str):\n",
+    "    \"\"\"Load FVCOM NOSOFS dataset\"\"\"\n",
     "\n",
-    "    if DEBUG:\n",
-    "        #print('dates : ', dates)\n",
-    "        #print('newest: ', newest)\n",
-    "        print('comdir: ', comdir)\n",
-    "        \n",
-    "    # Use the folder name to discover OFS, CDATE, HH\n",
-    "    ofs = comdir.split('.')[0].split('/')[-1]\n",
-    "    print(ofs)\n",
-    "    CDATE = newest[0:8]\n",
-    "    HH = newest[8:10]\n",
-    "    print(CDATE)\n",
-    "    print(HH)\n",
-    "    \n",
-    "    COMDIR = comdir\n",
-    "    OFS = ofs\n",
-    "    print(COMDIR)\n",
-    "     \n",
-    "    if DEBUG: # Only grab first 0-9 hours. Faster!\n",
-    "        filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
-    "    else: # Grab all hours\n",
-    "        filespec = f'{COMDIR}/nos.{OFS}.fields.f*.t{HH}z.nc'\n",
-    "        \n",
+    "    from netCDF4 import MFDataset\n",
+    "\n",
+    "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
     "    print(f'filespec is: {filespec}')\n",
-    "    return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Testing\n",
-    "# dsofs_latest()"
+    "    return MFDataset(filespec)\n",
+    "\n"
    ]
   },
   {
@@ -169,8 +119,13 @@
     "        filespec = f'{COMDIR}/nos.{OFS}.fields.f*.t{HH}z.nc'\n",
     "        \n",
     "    print(f'filespec is: {filespec}')\n",
-    "    return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n",
-    "    "
+    "    if OFS in utils.roms_models:\n",
+    "        return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n",
+    "    elif OFS in utils.fvcom_models:\n",
+    "        return MFDataset(filespec)\n",
+    "    else:\n",
+    "        print(f\"ERROR: model not recognized: {OFS}\")\n",
+    "        return None"
    ]
   },
   {
@@ -181,22 +136,6 @@
    "source": [
     "# Testing\n",
     "# dsofs_curr_fcst()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dsofs_curr_nowcst(COMROT: str='/com/nos'):\n",
-    "    \"\"\" Load the currently run OFS nowcast on COMROT \n",
-    "    This is almost the same as dosfs_newest, but will work better\n",
-    "    when running when injected in a workflow.\n",
-    "    It depends on a file being present in COMROT 'current.nowcst'\n",
-    "    \"\"\"\n",
-    "    print('dsofs_curr_nowcst stub')\n",
-    "    "
    ]
   },
   {
@@ -262,8 +201,10 @@
     "    if s3upload:\n",
     "        s3 = S3Storage()\n",
     "        bucket = 'ioos-cloud-www'\n",
-    "        bucket_folder = 'sandbot'\n",
-    "        key = f'{bucket_folder}/{variable}.png'\n",
+    "        bucket_folder = 'sandbot/'\n",
+    "        bucket_folder = ''\n",
+    "\n",
+    "        key = f'{bucket_folder}{variable}.png'\n",
     "        s3.uploadFile(outfile, bucket, key, public = True)\n",
     "\n",
     "    return imagename\n"
@@ -275,74 +216,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main_with_jobobj(job: Plotting):\n",
-    "\n",
-    "    COMDIR = job.INDIR\n",
-    "    OFS = job.OFS\n",
-    "    HH = job.HH\n",
-    "    rho_vars = job.VARS\n",
-    "\n",
-    "    print(f'COMDIR is: {COMDIR}')\n",
-    "    print(f'OFS is: {OFS}')\n",
-    "    print(f'HH is: {HH}')\n",
-    "    print('Running ...')\n",
-    "\n",
-    "    # could check that this is a roms model\n",
-    "    # if ofs in utils.roms_models then do roms\n",
-    "    # else if ofs in utils.fvcom_models then do fvcom\n",
-    "\n",
-    "    ds_roms = roms_nosofs(COMDIR, OFS, HH)\n",
-    "    \n",
-    "    indexfile = f'docs/index.html'\n",
-    "    if not os.path.exists('./docs'):\n",
-    "        os.makedirs('./docs')\n",
-    "\n",
-    "    bucket = 'ioos-cloud-www'\n",
-    "    bucket_folder = 'sandbot'\n",
-    "\n",
-    "    storageService = S3Storage()\n",
-    "\n",
-    "    #rho_vars = ['temp',\"zeta\", \"salt\" ]\n",
-    "\n",
-    "    imagelist = []\n",
-    "\n",
-    "    for var in rho_vars:\n",
-    "        imagename = plot_rho(ds_roms, var, s3upload=True)\n",
-    "        imagelist.append(imagename)\n",
-    "\n",
-    "    make_indexhtml(indexfile, imagelist)\n",
-    "    storageService.uploadFile(indexfile, bucket, f'{bucket_folder}/index.html', public=True, text=True)\n",
-    "    \n",
-    "    print('Finished ...')\n",
-    "    # return ds_roms\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_with_jobobj():\n",
-    "    ''' We're still looking for a way to not have to do something like this. \n",
-    "    We really want this job to run without having to specify any parameters. '''\n",
-    "    jobfile = 'plotting_job.json'\n",
-    "    NPROCS = 1\n",
-    "    testjob = Plotting(jobfile, 1)\n",
-    "    main_with_jobonj(testjob)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def main():\n",
-    "    \n",
-    "    #ds_ofs = dsofs_latest()\n",
-    "    \n",
+    "       \n",
     "    ds_ofs = dsofs_curr_fcst()\n",
     "    \n",
     "    indexfile = f'docs/index.html'\n",
@@ -350,7 +225,9 @@
     "        os.makedirs('./docs')\n",
     "\n",
     "    bucket = 'ioos-cloud-www'\n",
-    "    bucket_folder = 'sandbot'\n",
+    "    bucket_folder = ''\n",
+    "    #bucket_folder = 'sandbot/'\n",
+    "\n",
     "    \n",
     "    storageService = S3Storage()\n",
     "\n",
@@ -363,7 +240,7 @@
     "        imagelist.append(imagename)\n",
     "\n",
     "    make_indexhtml(indexfile, imagelist)\n",
-    "    storageService.uploadFile(indexfile, bucket, f'{bucket_folder}/index.html', public=True, text=True)\n",
+    "    storageService.uploadFile(indexfile, bucket, f'{bucket_folder}index.html', public=True, text=True)\n",
     "    \n",
     "    print('Finished ...')"
    ]
@@ -374,9 +251,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Testing\n",
-    "# main_no_jobobj()\n",
-    "\n",
     "main()"
    ]
   },
