--- a/cloudflow/notebooks/sandbot_latest_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_latest_fcst.ipynb
@@ -8,16 +8,22 @@
    "source": [
     "import sys\n",
     "import os\n",
+    "import glob\n",
+    "from datetime import datetime\n",
+    "\n",
     "import boto3\n",
     "import cmocean\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
-    "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from xarray import open_mfdataset\n",
+    "\n",
     "from cloudflow.services.S3Storage import S3Storage\n",
-    "from cloudflow.job.Plotting import Plotting\n"
+    "from cloudflow.job.Plotting import Plotting\n",
+    "from cloudflow.utils import romsUtil as utils\n",
+    "\n",
+    "DEBUG = True"
    ]
   },
   {
@@ -31,7 +37,8 @@
     "    htmlhead = '''<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
     "                  <meta http-equiv=\"Cache-control\" content=\"no-cache\">\n",
     "                  <head>\n",
-    "                  <title>Cloud-Sandbot</title>'''\n",
+    "                  <title>Cloud-Sandbot</title>\n",
+    "                  </head>'''\n",
     "\n",
     "    htmlbody = '<body>\\n'\n",
     "    for image in imagelist:\n",
@@ -55,11 +62,103 @@
    "outputs": [],
    "source": [
     "def roms_nosofs(COMDIR: str, OFS: str, HH: str):\n",
-    "    '''Load ROMS NOSOFS dataset'''\n",
+    "    \"\"\"Load ROMS NOSOFS dataset\"\"\"\n",
     "\n",
     "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
     "    print(f'filespec is: {filespec}')\n",
     "    return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fvcom_nosofs(COMDIR: str, OFS: str, HH: str):\n",
+    "    \"\"\"Load FVCOM NOSOFS dataset\"\"\"\n",
+    "\n",
+    "    from netCDF4 import MFDataset\n",
+    "\n",
+    "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
+    "    print(f'filespec is: {filespec}')\n",
+    "    return MFDataset(filespec)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dsofs_latest(COMROT: str='/com/nos'):\n",
+    "    \"\"\" Load the most recent OFS forecast available on COMROT \"\"\"\n",
+    "    \n",
+    "    # List the directories in COMROT that match [a-z]*ofs.YYYYMMDDHH\n",
+    "    regex = \"[a-z]*ofs.*[0-1][0-9][0-3][0-9][0-9][0-9]\"\n",
+    "    dirs = glob.glob(f'{COMROT}/{regex}')\n",
+    "    \n",
+    "    if DEBUG: \n",
+    "        print ('dirs: ', dirs)\n",
+    "    \n",
+    "    # Find the one that has the most recent forecast date (do not use modification time?)\n",
+    "    # But what if there are two different forecasts for the same date? (use modification time)\n",
+    "    dates = []\n",
+    "    newest='1900010100'\n",
+    "    comdir=dirs[0]\n",
+    "    \n",
+    "    for path in dirs:\n",
+    "        #print(path.split('.'))\n",
+    "        date = path.split('.')[-1]\n",
+    "        if date > newest:\n",
+    "            newest = date\n",
+    "            comdir = path          \n",
+    "            \n",
+    "        dates.append(date)\n",
+    "\n",
+    "    if DEBUG:\n",
+    "        #print('dates : ', dates)\n",
+    "        #print('newest: ', newest)\n",
+    "        print('comdir: ', comdir)\n",
+    "        \n",
+    "    # Use the folder name to discover OFS, CDATE, HH\n",
+    "    ofs = comdir.split('.')[0].split('/')[-1]\n",
+    "    print(ofs)\n",
+    "    CDATE = newest[0:8]\n",
+    "    HH = newest[8:10]\n",
+    "    print(CDATE)\n",
+    "    print(HH)\n",
+    "    \n",
+    "    COMDIR = comdir\n",
+    "    OFS = ofs\n",
+    "    print(COMDIR)\n",
+    "    \n",
+    "    if DEBUG: # Only grab first 0-9 hours. Faster!\n",
+    "        filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
+    "    else: # Grab all hours\n",
+    "        filespec = f'{COMDIR}/nos.{OFS}.fields.f*.t{HH}z.nc'\n",
+    "        \n",
+    "    print(f'filespec is: {filespec}')\n",
+    "    \n",
+    "    if OFS in utils.roms_models:\n",
+    "        return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n",
+    "    elif OFS in utils.fvcom_models:\n",
+    "        return MFDataset(filespec)\n",
+    "    else:\n",
+    "        print(f\"ERROR: model not recognized: {OFS}\")\n",
+    "        return None\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Testing\n",
+    "#dsofs_latest()"
    ]
   },
   {
@@ -136,19 +235,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main(job: Plotting):\n",
-    "\n",
-    "    COMDIR = job.INDIR\n",
-    "    OFS = job.OFS\n",
-    "    HH = job.HH\n",
-    "    rho_vars = job.VARS\n",
-    "\n",
-    "    print(f'COMDIR is: {COMDIR}')\n",
-    "    print(f'OFS is: {OFS}')\n",
-    "    print(f'HH is: {HH}')\n",
-    "    print('Running ...')\n",
-    "\n",
-    "    ds_roms = roms_nosofs(COMDIR, OFS, HH)\n",
+    "def main():\n",
+    "    \n",
+    "    ds_ofs = dsofs_latest()\n",
+    "    \n",
     "    indexfile = f'docs/index.html'\n",
     "    if not os.path.exists('./docs'):\n",
     "        os.makedirs('./docs')\n",
@@ -157,20 +247,18 @@
     "\n",
     "    storageService = S3Storage()\n",
     "\n",
-    "    #rho_vars = ['temp',\"zeta\", \"salt\" ]\n",
+    "    rho_vars = ['temp',\"zeta\", \"salt\" ]\n",
     "\n",
     "    imagelist = []\n",
     "\n",
     "    for var in rho_vars:\n",
-    "        imagename = plot_rho(ds_roms, var, s3upload=True)\n",
+    "        imagename = plot_rho(ds_ofs, var, s3upload=True)\n",
     "        imagelist.append(imagename)\n",
     "\n",
     "    make_indexhtml(indexfile, imagelist)\n",
     "    storageService.uploadFile(indexfile, bucket, 'index.html', public=True, text=True)\n",
     "    \n",
-    "    print('Finished ...')\n",
-    "    # return ds_roms\n",
-    "    "
+    "    print('Finished ...')"
    ]
   },
   {
@@ -179,13 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' We're still looking for a way to not have to do something like this.\n",
-    "We really want this job to run without having to specify any parameters.\n",
-    "'''\n",
-    "jobfile = 'plotting_job.json'\n",
-    "NPROCS = 1\n",
-    "testjob = Plotting(jobfile, 1)\n",
-    "main(testjob)"
+    "main()"
    ]
   },
   {
