--- a/cloudflow/notebooks/sandbot_latest_fcst_jobobj.ipynb
+++ b/cloudflow/notebooks/sandbot_latest_fcst_jobobj.ipynb
@@ -21,6 +21,7 @@
     "\n",
     "from cloudflow.services.S3Storage import S3Storage\n",
     "from cloudflow.job.Plotting import Plotting\n",
+    "from cloudflow.utils import romsUtil as utils\n",
     "\n",
     "DEBUG = True"
    ]
@@ -62,12 +63,26 @@
     "def roms_nosofs(COMDIR: str, OFS: str, HH: str):\n",
     "    \"\"\"Load ROMS NOSOFS dataset\"\"\"\n",
     "\n",
-    "    # Why load in the entire dataset when only plotting one time slice? \n",
-    "    # It is extremely slow!\n",
-    "    #  nos.gomofs.fields.f006.20200819.t00z.nc\n",
     "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
     "    print(f'filespec is: {filespec}')\n",
     "    return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fvcom_nosofs(COMDIR: str, OFS: str, HH: str):\n",
+    "    \"\"\"Load FVCOM NOSOFS dataset\"\"\"\n",
+    "\n",
+    "    from netCDF4 import MFDataset\n",
+    "\n",
+    "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
+    "    print(f'filespec is: {filespec}')\n",
+    "    return MFDataset(filespec)\n",
+    "\n"
    ]
   },
   {
@@ -124,7 +139,15 @@
     "        filespec = f'{COMDIR}/nos.{OFS}.fields.f*.t{HH}z.nc'\n",
     "        \n",
     "    print(f'filespec is: {filespec}')\n",
-    "    return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n"
+    "    \n",
+    "    if OFS in utils.roms_models:\n",
+    "        return open_mfdataset(filespec, decode_times=False, combine='by_coords')\n",
+    "    elif OFS in utils.fvcom_models:\n",
+    "        return MFDataset(filespec)\n",
+    "    else:\n",
+    "        print(f\"ERROR: model not recognized: {OFS}\")\n",
+    "        return None\n",
+    "    "
    ]
   },
   {
@@ -134,7 +157,7 @@
    "outputs": [],
    "source": [
     "# Testing\n",
-    "# dsofs_latest()"
+    "#dsofs_latest()"
    ]
   },
   {
@@ -223,10 +246,6 @@
     "    print(f'HH is: {HH}')\n",
     "    print('Running ...')\n",
     "\n",
-    "    # could check that this is a roms model\n",
-    "    # if ofs in utils.roms_models then do roms\n",
-    "    # else if ofs in utils.fvcom_models then do fvcom\n",
-    "\n",
     "    ds_roms = roms_nosofs(COMDIR, OFS, HH)\n",
     "    \n",
     "    indexfile = f'docs/index.html'\n",
@@ -259,39 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main_no_jobobj():\n",
-    "    \n",
-    "    ds_ofs = dsofs_latest()\n",
-    "    \n",
-    "    indexfile = f'docs/index.html'\n",
-    "    if not os.path.exists('./docs'):\n",
-    "        os.makedirs('./docs')\n",
-    "\n",
-    "    bucket = 'ioos-cloud-www'\n",
-    "\n",
-    "    storageService = S3Storage()\n",
-    "\n",
-    "    rho_vars = ['temp',\"zeta\", \"salt\" ]\n",
-    "\n",
-    "    imagelist = []\n",
-    "\n",
-    "    for var in rho_vars:\n",
-    "        imagename = plot_rho(ds_ofs, var, s3upload=True)\n",
-    "        imagelist.append(imagename)\n",
-    "\n",
-    "    make_indexhtml(indexfile, imagelist)\n",
-    "    storageService.uploadFile(indexfile, bucket, 'index.html', public=True, text=True)\n",
-    "    \n",
-    "    print('Finished ...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_with_jobobj():\n",
+    "def run_jobobj():\n",
     "    ''' We're still looking for a way to not have to do something like this. \n",
     "    We really want this job to run without having to specify any parameters. '''\n",
     "    jobfile = 'plotting_job.json'\n",
@@ -306,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_no_jobobj()"
+    "run_jobobj()"
    ]
   },
   {
