--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -10,6 +10,7 @@
     "import os\n",
     "import glob\n",
     "from datetime import datetime\n",
+    "import re\n",
     "\n",
     "import boto3\n",
     "import cmocean\n",
@@ -18,11 +19,11 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from xarray import open_mfdataset\n",
+    "from netCDF4 import MFDataset\n",
     "\n",
     "from cloudflow.services.S3Storage import S3Storage\n",
     "from cloudflow.job.Plotting import Plotting\n",
     "from cloudflow.utils import romsUtil as utils\n",
-    "\n",
     "\n",
     "DEBUG = True"
    ]
@@ -43,8 +44,8 @@
     "\n",
     "    htmlbody = '<body>\\n'\n",
     "    for image in imagelist:\n",
-    "       imagehtml = f'<img src=\"{image}\">\\n'\n",
-    "       htmlbody += imagehtml\n",
+    "        imagehtml = f'<img src=\"{image}\">\\n'\n",
+    "        htmlbody += imagehtml\n",
     "\n",
     "    htmlbody += '</body>\\n'\n",
     "    html = f'''{htmlhead}\n",
@@ -83,8 +84,7 @@
     "\n",
     "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
     "    print(f'filespec is: {filespec}')\n",
-    "    return MFDataset(filespec)\n",
-    "\n"
+    "    return MFDataset(filespec)\n"
    ]
   },
   {
@@ -101,6 +101,8 @@
     "    \"\"\"\n",
     "    \n",
     "    cur_file = f'{COMROT}/current.fcst'\n",
+    "    cur_file = f'{COMROT}/testing.fcst'\n",
+    "    \n",
     "    with open(cur_file) as cf:\n",
     "        fcst = cf.read().rstrip(' \\n')\n",
     "    \n",
@@ -134,32 +136,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Testing\n",
-    "# dsofs_curr_fcst()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_rho(ds, variable, s3upload=False) -> str:\n",
+    "def plot_roms(ds, variable, s3upload=False) -> str:\n",
     "    \n",
     "    if variable == 'zeta':\n",
-    "        da = ds[variable].isel(ocean_time=0)\n",
+    "        da = ds[variable].isel(ocean_time=1)\n",
     "        cmap = cmocean.cm.phase\n",
     "    if variable == 'temp':\n",
-    "        da = ds[variable].isel(ocean_time=0, s_rho=0)\n",
+    "        da = ds[variable].isel(ocean_time=1, s_rho=0)\n",
     "        cmap = cmocean.cm.thermal\n",
     "    if variable == 'salt':\n",
-    "        da = ds[variable].isel(ocean_time=0, s_rho=0)\n",
+    "        da = ds[variable].isel(ocean_time=1, s_rho=0)\n",
     "        cmap = cmocean.cm.haline\n",
     "    if variable == 'oxygen':\n",
-    "        da = ds[variable].isel(ocean_time=0, s_rho=0)\n",
+    "        da = ds[variable].isel(ocean_time=1, s_rho=0)\n",
     "        cmap = cmocean.cm.oxy\n",
     "    if variable == 'Pair':\n",
-    "        da = ds[variable].isel(ocean_time=0)\n",
+    "        da = ds[variable].isel(ocean_time=1)\n",
     "        cmap = cmocean.cm.diff\n",
     "      \n",
     "    fig = plt.figure(figsize=(12,5))\n",
@@ -216,9 +208,232 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_fvcom(ds, variable, s3upload=False) -> str:\n",
+    "\n",
+    "    time = 0\n",
+    "    siglay = 0\n",
+    "    dims = 2\n",
+    "    \n",
+    "    if variable == 'zeta':\n",
+    "        #zeta(time, node)\n",
+    "        dims = 2\n",
+    "        da = ds[variable]\n",
+    "        cmap = cmocean.cm.phase\n",
+    "    if variable == 'temp':\n",
+    "        #temp(time, siglay, node)\n",
+    "        dims = 3\n",
+    "        #da = ds[variable][:][siglay]\n",
+    "        da = ds.variables[variable]\n",
+    "        cmap = cmocean.cm.thermal\n",
+    "    if variable == 'salt':\n",
+    "        #salinity(time, siglay, node)\n",
+    "        dims = 3\n",
+    "        da = ds['salinity']\n",
+    "        cmap = cmocean.cm.haline\n",
+    "    if variable == 'Pair':\n",
+    "        #atmos_press(time, node)\n",
+    "        dims = 2\n",
+    "        da = ds['atmos_press']\n",
+    "        cmap = cmocean.cm.diff\n",
+    "          \n",
+    "   \n",
+    "    fig = plt.figure(figsize=(12,5))\n",
+    "    ax = fig.add_axes([0,0,1,1], projection=ccrs.PlateCarree())\n",
+    "    lon = ds['lon'][:]\n",
+    "    lon = np.where(lon > 180., lon-360., lon)\n",
+    "    lat = ds['lat'][:]\n",
+    "    #im = ax.contourf(lon, lat, da, transform=ccrs.PlateCarree(), cmap=cmap)\n",
+    "    #da needs to be 2 dimensional array x,y, but fvcom is single dimension node or nele\n",
+    "    #im = ax.contourf(da, cmap=cmap)\n",
+    "    nv = ds.variables['nv'][:].T\n",
+    "    nv = nv - 1\n",
+    "\n",
+    "    #print(f\"DEBUGGING: lon.len: {len(lon[:])}, da.len: {len(da[:])} \")\n",
+    "    if dims == 2:\n",
+    "        im = ax.tripcolor(lon, lat, nv, da[time], cmap=cmap)\n",
+    "    if dims == 3:\n",
+    "        im = ax.tripcolor(lon, lat, nv, da[time][siglay], cmap=cmap)\n",
+    "\n",
+    "\n",
+    "    coast_10m = cfeature.NaturalEarthFeature(\n",
+    "        'physical', 'land', '10m',\n",
+    "        edgecolor='k', facecolor='0.8'\n",
+    "    )\n",
+    "    ax.add_feature(coast_10m);\n",
+    "    \n",
+    "    title = ds.title\n",
+    "    now = datetime.now().strftime(\"%m/%d/%Y, %H:%M:%S\")\n",
+    "    print(now)\n",
+    "    ax.set_title(f\"Image generated on {now}\\n\\n{title}\");\n",
+    "    \n",
+    "    cbar = fig.colorbar(im, ax=ax)\n",
+    "    long_name = da.long_name\n",
+    "    \n",
+    "    if variable != 'salt':\n",
+    "        units = da.units\n",
+    "        cbar.set_label(f'{long_name} ({units})')\n",
+    "    else:\n",
+    "        cbar.set_label(f'{long_name}')\n",
+    "    \n",
+    "    indexfile = f'docs/index.html'\n",
+    "    outfile = f'docs/{variable}.png'\n",
+    "    \n",
+    "    if not os.path.exists('./docs'):\n",
+    "        os.makedirs('./docs')\n",
+    "\n",
+    "    imagename = outfile.split('/')[-1]\n",
+    "\n",
+    "    plt.savefig(outfile, bbox_inches='tight')\n",
+    "             \n",
+    "    if s3upload:\n",
+    "        s3 = S3Storage()\n",
+    "        bucket = 'ioos-cloud-www'\n",
+    "        bucket_folder = 'sandbot/'\n",
+    "        bucket_folder = ''\n",
+    "\n",
+    "        key = f'{bucket_folder}{variable}.png'\n",
+    "        s3.uploadFile(outfile, bucket, key, public = True)\n",
+    "\n",
+    "    return imagename\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_model_type(ds) -> str:\n",
+    "    \n",
+    "    # ROMS\n",
+    "    # \"type: ROMS/TOMS history file\"\n",
+    "    try:\n",
+    "        typestr = ds.attrs['type']\n",
+    "        if re.search('ROMS', typestr):\n",
+    "            return 'roms'\n",
+    "    except Exception as e:\n",
+    "        print('Not ROMS')\n",
+    "    \n",
+    "    # FVCOM\n",
+    "    # :source = \"FVCOM_4.3\"\n",
+    "    try:\n",
+    "        sourcestr = ds.source\n",
+    "        if re.search('FVCOM', sourcestr):\n",
+    "            return 'fvcom'\n",
+    "        print(f'sourcestr: {sourcestr}')\n",
+    "    except Exception as e:\n",
+    "        print('Not FVCOM')\n",
+    "        \n",
+    "    #print(ds.ncattrs)\n",
+    "    #print('Source: ', ds.source)\n",
+    "    #print('------- END OF get_model_types -------')\n",
+    "    return 'unknown'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Testing\n",
+    "\n",
+    "ds = dsofs_curr_fcst()\n",
+    "#ds\n",
+    "get_model_type(ds)\n",
+    "#ofs = ofsname_curr()\n",
+    "#print(f'OFS is: {ofs}')\n",
+    "#ds\n",
+    "variable = 'salinity'\n",
+    "variable = 'temp'\n",
+    "#da = ds[temp][0][0]\n",
+    "    \n",
+    "da = ds.variables[variable][0]\n",
+    "# da is a numpy array\n",
+    "print(da)\n",
+    "#print(da.long_name)\n",
+    "\n",
+    "da = ds.variables[variable]\n",
+    "# da is a netcdf variable\n",
+    "print(da)\n",
+    "print(da.long_name)\n",
+    "print(da)\n",
+    "\n",
+    "#lon = ds['lon']\n",
+    "#print(lon)\n",
+    "\n",
+    "#lat = ds['lat']\n",
+    "#print(lat)\n",
+    "\n",
+    "#nv = ds.variables['nv'][:].T\n",
+    "#nv = nv - 1\n",
+    "\n",
+    "nv = ds.variables['nv'][0][:] \n",
+    "nv = nv - 1\n",
+    "print(f\"DEBUGGING - nv :  {nv}, len: {len(nv)}\")\n",
+    "\n",
+    "\n",
+    "# THIS ONE DOESN'T CAUSE AN ERROR\n",
+    "nv = ds.variables['nv'][:].T\n",
+    "nv = nv - 1\n",
+    "print(f\"DEBUGGING - nv :  {nv}, len: {len(nv)}\")\n",
+    "######################\n",
+    "\n",
+    "nv = ds.variables['nv'][0][:].T\n",
+    "nv = nv - 1\n",
+    "print(f\"DEBUGGING - nv :  {nv}, len: {len(nv)}\")\n",
+    "\n",
+    "ds.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_runner(ds, variable, s3upload=False) -> str:\n",
+    "\n",
+    "    # OFS = 'cbofs'\n",
+    "    #OFS = ofsname_curr()\n",
+    "\n",
+    "    model_type = get_model_type(ds)\n",
+    "    if model_type == 'roms':\n",
+    "        imagename = plot_roms(ds_ofs, var, s3upload=True)\n",
+    "    elif model_type == 'fvcom':\n",
+    "        imagename = plot_fvcom(ds_ofs, var, s3upload=True)\n",
+    "    else:\n",
+    "        print(f\"ERROR: Unsupported model type - {modeltype}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ofsname_curr(cur_file : str = '/com/nos/current.fcst') -> str:\n",
+    "\n",
+    "    with open(cur_file) as cf:\n",
+    "        fcst = cf.read().rstrip(' \\n')\n",
+    "    \n",
+    "    print('fcst: ', fcst)\n",
+    "    \n",
+    "    OFS = fcst.split('.')[0]\n",
+    "   \n",
+    "    return OFS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def main():\n",
     "       \n",
     "    ds_ofs = dsofs_curr_fcst()\n",
+    "    model = get_model_type(ds_ofs)\n",
     "    \n",
     "    indexfile = f'docs/index.html'\n",
     "    if not os.path.exists('./docs'):\n",
@@ -228,15 +443,23 @@
     "    bucket_folder = ''\n",
     "    #bucket_folder = 'sandbot/'\n",
     "\n",
-    "    \n",
     "    storageService = S3Storage()\n",
     "\n",
-    "    rho_vars = ['temp',\"zeta\", \"salt\" ]\n",
+    "    plot_vars = ['temp',\"zeta\", \"salt\" ]\n",
+    "    #plot_vars = ['temp']\n",
     "\n",
     "    imagelist = []\n",
+    "    \n",
+    "    for var in plot_vars:\n",
+    "        #imagename = plot_runner(ds_ofs, var, s3upload=True)\n",
+    "        if model == 'roms':\n",
+    "            imagename = plot_roms(ds_ofs, var, s3upload=True)\n",
+    "        elif model == 'fvcom':\n",
+    "            imagename = plot_fvcom(ds_ofs, var, s3upload=True)\n",
+    "        else:\n",
+    "            print('ERROR: model not supported')\n",
+    "            raise Exception(e)\n",
     "\n",
-    "    for var in rho_vars:\n",
-    "        imagename = plot_rho(ds_ofs, var, s3upload=True)\n",
     "        imagelist.append(imagename)\n",
     "\n",
     "    make_indexhtml(indexfile, imagelist)\n",
@@ -251,7 +474,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main()"
+    "main()\n",
+    "#testing()"
    ]
   },
   {
