--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -35,6 +35,7 @@
    "outputs": [],
    "source": [
     "def make_indexhtml(indexfile : str, imagelist : list):\n",
+    "    \"\"\" Creates a basic index.html file for displaying the images in imagelist \"\"\"\n",
     "\n",
     "    htmlhead = '''<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
     "                  <meta http-equiv=\"Cache-control\" content=\"no-cache\">\n",
@@ -80,8 +81,6 @@
     "def fvcom_nosofs(COMDIR: str, OFS: str, HH: str):\n",
     "    \"\"\"Load FVCOM NOSOFS dataset\"\"\"\n",
     "\n",
-    "    from netCDF4 import MFDataset\n",
-    "\n",
     "    filespec = f'{COMDIR}/nos.{OFS}.fields.f00*.t{HH}z.nc'\n",
     "    print(f'filespec is: {filespec}')\n",
     "    return MFDataset(filespec)\n"
@@ -96,12 +95,11 @@
     "def dsofs_curr_fcst(COMROT: str='/com/nos'):\n",
     "    \"\"\" Load the currently run OFS forecast on COMROT \n",
     "    This is almost the same as dosfs_newest, but will work better\n",
-    "    when running when injected in a workflow.\n",
+    "    when running when injected in the regular workflow.\n",
     "    It depends on a file being present in COMROT 'current.fcst'\n",
     "    \"\"\"\n",
     "    \n",
     "    cur_file = f'{COMROT}/current.fcst'\n",
-    "    cur_file = f'{COMROT}/testing.fcst'\n",
     "    \n",
     "    with open(cur_file) as cf:\n",
     "        fcst = cf.read().rstrip(' \\n')\n",
@@ -194,7 +192,6 @@
     "        s3 = S3Storage()\n",
     "        bucket = 'ioos-cloud-www'\n",
     "        bucket_folder = 'sandbot/'\n",
-    "        bucket_folder = ''\n",
     "\n",
     "        key = f'{bucket_folder}{variable}.png'\n",
     "        s3.uploadFile(outfile, bucket, key, public = True)\n",
@@ -289,7 +286,6 @@
     "        s3 = S3Storage()\n",
     "        bucket = 'ioos-cloud-www'\n",
     "        bucket_folder = 'sandbot/'\n",
-    "        bucket_folder = ''\n",
     "\n",
     "        key = f'{bucket_folder}{variable}.png'\n",
     "        s3.uploadFile(outfile, bucket, key, public = True)\n",
@@ -304,6 +300,7 @@
    "outputs": [],
    "source": [
     "def get_model_type(ds) -> str:\n",
+    "    \"\"\" Determines and returns the model used to create the dataset if known. \"\"\"\n",
     "    \n",
     "    # ROMS\n",
     "    # \"type: ROMS/TOMS history file\"\n",
@@ -312,7 +309,7 @@
     "        if re.search('ROMS', typestr):\n",
     "            return 'roms'\n",
     "    except Exception as e:\n",
-    "        print('Not ROMS')\n",
+    "        if DEBUG: print('Not ROMS data')\n",
     "    \n",
     "    # FVCOM\n",
     "    # :source = \"FVCOM_4.3\"\n",
@@ -322,11 +319,8 @@
     "            return 'fvcom'\n",
     "        print(f'sourcestr: {sourcestr}')\n",
     "    except Exception as e:\n",
-    "        print('Not FVCOM')\n",
+    "        if DEBUG: print('Not FVCOM data')\n",
     "        \n",
-    "    #print(ds.ncattrs)\n",
-    "    #print('Source: ', ds.source)\n",
-    "    #print('------- END OF get_model_types -------')\n",
     "    return 'unknown'"
    ]
   },
@@ -337,53 +331,42 @@
    "outputs": [],
    "source": [
     "# Testing\n",
+    "def testing():\n",
     "\n",
-    "ds = dsofs_curr_fcst()\n",
-    "#ds\n",
-    "get_model_type(ds)\n",
-    "#ofs = ofsname_curr()\n",
-    "#print(f'OFS is: {ofs}')\n",
-    "#ds\n",
-    "variable = 'salinity'\n",
-    "variable = 'temp'\n",
-    "#da = ds[temp][0][0]\n",
-    "    \n",
-    "da = ds.variables[variable][0]\n",
-    "# da is a numpy array\n",
-    "print(da)\n",
-    "#print(da.long_name)\n",
+    "    ds = dsofs_curr_fcst()\n",
+    "    #ds\n",
+    "    get_model_type(ds)\n",
     "\n",
-    "da = ds.variables[variable]\n",
-    "# da is a netcdf variable\n",
-    "print(da)\n",
-    "print(da.long_name)\n",
-    "print(da)\n",
+    "    variable = 'salinity'\n",
+    "    variable = 'temp'\n",
+    "    #da = ds[temp][0][0]\n",
     "\n",
-    "#lon = ds['lon']\n",
-    "#print(lon)\n",
+    "    da = ds.variables[variable][0]\n",
+    "    # da is a numpy array\n",
+    "    print(da)\n",
     "\n",
-    "#lat = ds['lat']\n",
-    "#print(lat)\n",
-    "\n",
-    "#nv = ds.variables['nv'][:].T\n",
-    "#nv = nv - 1\n",
-    "\n",
-    "nv = ds.variables['nv'][0][:] \n",
-    "nv = nv - 1\n",
-    "print(f\"DEBUGGING - nv :  {nv}, len: {len(nv)}\")\n",
+    "    da = ds.variables[variable]\n",
+    "    # da is a netcdf variable\n",
+    "    print(da)\n",
+    "    #print(da.long_name)\n",
     "\n",
     "\n",
-    "# THIS ONE DOESN'T CAUSE AN ERROR\n",
-    "nv = ds.variables['nv'][:].T\n",
-    "nv = nv - 1\n",
-    "print(f\"DEBUGGING - nv :  {nv}, len: {len(nv)}\")\n",
-    "######################\n",
+    "    nv = ds.variables['nv'][0][:] \n",
+    "    nv = nv - 1\n",
+    "    print(f\"DEBUGGING - nv :  {nv}, len: {len(nv)}\")\n",
     "\n",
-    "nv = ds.variables['nv'][0][:].T\n",
-    "nv = nv - 1\n",
-    "print(f\"DEBUGGING - nv :  {nv}, len: {len(nv)}\")\n",
     "\n",
-    "ds.close()"
+    "    # THIS ONE DOESN'T CAUSE AN ERROR\n",
+    "    nv = ds.variables['nv'][:].T\n",
+    "    nv = nv - 1\n",
+    "    print(f\"DEBUGGING - nv :  {nv}, len: {len(nv)}\")\n",
+    "    ######################\n",
+    "\n",
+    "    nv = ds.variables['nv'][0][:].T\n",
+    "    nv = nv - 1\n",
+    "    print(f\"DEBUGGING - nv :  {nv}, len: {len(nv)}\")\n",
+    "\n",
+    "    ds.close()"
    ]
   },
   {
@@ -393,9 +376,7 @@
    "outputs": [],
    "source": [
     "def plot_runner(ds, variable, s3upload=False) -> str:\n",
-    "\n",
-    "    # OFS = 'cbofs'\n",
-    "    #OFS = ofsname_curr()\n",
+    "    \"\"\" Alternative implementation for running the appropriate plot routine based on the model type\"\"\"\n",
     "\n",
     "    model_type = get_model_type(ds)\n",
     "    if model_type == 'roms':\n",
@@ -413,6 +394,7 @@
    "outputs": [],
    "source": [
     "def ofsname_curr(cur_file : str = '/com/nos/current.fcst') -> str:\n",
+    "    \"\"\" Determines and returns the forecast type in the current.fcst file\"\"\"\n",
     "\n",
     "    with open(cur_file) as cf:\n",
     "        fcst = cf.read().rstrip(' \\n')\n",
@@ -440,8 +422,7 @@
     "        os.makedirs('./docs')\n",
     "\n",
     "    bucket = 'ioos-cloud-www'\n",
-    "    bucket_folder = ''\n",
-    "    #bucket_folder = 'sandbot/'\n",
+    "    bucket_folder = 'sandbot/'\n",
     "\n",
     "    storageService = S3Storage()\n",
     "\n",
