fix notebook image filenames going to S3

--- a/cloudflow/notebooks/sandbot_current_fcst.ipynb
+++ b/cloudflow/notebooks/sandbot_current_fcst.ipynb
@@ -232,7 +232,7 @@
     "        bucket = 'ioos-cloud-www'\n",
     "        bucket_folder = 'sandbot/'\n",
     "\n",
-    "        key = f'{bucket_folder}{variable}.png'\n",
+    "        key = f'{bucket_folder}{imagename}'\n",
     "        s3.uploadFile(outfile, bucket, key, public=True)\n",
     "\n",
     "    return imagename"
@@ -359,7 +359,7 @@
     "        bucket = 'ioos-cloud-www'\n",
     "        bucket_folder = 'sandbot/'\n",
     "\n",
-    "        key = f'{bucket_folder}{variable}.png'\n",
+    "        key = f'{bucket_folder}{imagename}'\n",
     "        s3.uploadFile(outfile, bucket, key, public=True)\n",
     "\n",
     "    return imagename\n"
